--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Nikolay Velichov">
     <meta name="description" content="This is my first personal website, hopefully not the last one!">
     <meta name="robots" content="noindex">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <script src="./src/app.js" type="module"></script>
     <script src="https://kit.fontawesome.com/0efa9eb013.js" crossorigin="anonymous"></script>
     <title>Nikolay's personal webpage</title>
