--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <nav id='navigation-panel' class='side-navigation'>
         <div class="navigation-container">
             <div class="picture-name">
-                <div class="picture-container"><img class="profile-picture" src="https://github.com/NikolayVel/My-Page/blob/main/img/profile-1-small.jpg?raw=true"
+                <div class="picture-container"><img class="profile-picture" src="./img/profile-1-small.jpg"
                         alt="My Picture"></div>
                 <div class="horizontal-line"></div>
                 <div class="my-name">
@@ -48,7 +48,7 @@
     </nav>
 
     <div class="mobile-menu">
-        <div class="picture-container mobile"><img class="profile-picture" src="https://github.com/NikolayVel/My-Page/blob/main/img/profile-1-small.jpg?raw=true"
+        <div class="picture-container mobile"><img class="profile-picture" src="./img/profile-1-small.jpg"
             alt="My Picture"></div>
         <div class="menu-items visible">
             <ul>
