--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <nav id='navigation-panel' class='side-navigation'>
         <div class="navigation-container">
             <div class="picture-name">
-                <div class="picture-container"><img class="profile-picture" src="./img/profile-1-small.jpg"
+                <div class="picture-container"><img class="profile-picture" src="./img/profile-1-small-adj.jpg"
                         alt="My Picture"></div>
                 <div class="horizontal-line"></div>
                 <div class="my-name">
@@ -29,28 +29,28 @@
 
             <div class="nav-menu">
                 <ul>
-                    <li><a href="/">Home</a></li>
-                    <li><a href="/personality">Personality</a></li>
-                    <li><a href="/education">Education</a></li>
-                    <li><a href="/experience">Experience</a></li>
-                    <li><a href="/contacts">Contacts</a></li>
+                    <li><a id="home-link" href="/">Home</a></li>
+                    <li><a id="personality-link" href="/personality">Personality</a></li>
+                    <li><a id="education-link" href="/education">Education</a></li>
+                    <li><a id="experience-link" href="/experience">Experience</a></li>
+                    <li><a id="contacts-link" href="/contacts">Contacts</a></li>
                 </ul>
             </div>
 
            
             <div class="social-icons">
-                <a href=""><i class="fab fa-facebook"></i></a>
-                <a href=""><i class="fab fa-twitter"></i></a>
-                <a href=""><i class="fab fa-github"></i></a>
-                <a href=""><i class="fab fa-youtube"></i></a>
+                <a href="https://www.facebook.com/nikolai.velichkov.5/" target="_blank"><i class="fab fa-facebook"></i></a>
+                <a href="https://twitter.com/real_Nikolay" target="_blank"><i class="fab fa-twitter"></i></a>
+                <a href="https://github.com/NikolayVel/" target="_blank"><i class="fab fa-github"></i></a>
+                <a href="" target="_blank"><i class="fab fa-youtube"></i></a>
             </div>
         </div>
     </nav>
 
     <div class="mobile-menu">
-        <div class="picture-container mobile"><img class="profile-picture" src="./img/profile-1-small.jpg"
-            alt="My Picture"></div>
-        <div class="menu-items visible">
+        <div class="picture-container mobile"><img class="profile-picture" src="./img/profile-1-small-adj.jpg"
+            alt="My Picture"><i class="fa fas-chevron-down"></i> </div>
+        <div class="menu-items ">
             <ul>
                 <li><a href="/">Home</a></li>
                 <li><a href="/personality">Personality</a></li>
